feat: english -drilling and filler machine

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                     <li class="content__text">Work documentation from sticker layouts to drawings and specifications (PDF, SVG).</li>
                                     <li class="content__text">Vector and raster graphics.</li>
                                     <li class="content__text">Preparation of furniture samples for mechanical testing and sending to approved laboratories by IKEA.</li>
-                                    <li class="content__text">Сorrespondence with laboratory engineers.</li>
+                                    <li class="content__text">Correspondence with laboratory engineers.</li>
                                     <li class="content__text">Development of models of cabinet furniture and detailing, furniture mechanisms.</li>
                                 </ul>
                             </td>
@@ -154,7 +154,7 @@
                                 <h3 class="content__subtitle">Machine operator CNC, FLLC Mebelain.</h3>
                                 <ul>
                                     <li class="content__text">Operator of a CNC woodworking center (WoodWop).</li>
-                                    <li class="content__text">Operator of a drilling line.</li>
+                                    <li class="content__text">Operator of a drilling and filler machine.</li>
                                 </ul>
                             </td>
                         </tr>
@@ -165,7 +165,7 @@
                                 <ul>
                                     <li class="content__text">Ensuring that the site fulfills planned targets.</li>
                                     <li class="content__text">Ensuring maximum utilization of production capacity, full utilization and proper operation of equipment.</li>
-                                    <li class="content__text">Ensuring the timely preparation of production with materials, semi-finished products, tools, fixtures, technical documentation.</li>
+                                    <li class="content__text">Ensuring the timely preparation of production with materials, finished products, tools, fixtures, technical documentation.</li>
                                     <li class="content__text">Systematic verification of the fulfillment of tasks by teams and individual workers.</li>
                                     <li class="content__text">Organization of the solution of production and social issues of the unit's activities.</li>
                                     <li class="content__text">Instructing subordinate workers, providing them with the necessary assistance in mastering production standards and fulfilling production tasks.</li>
