--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <h2 class="content__title">Skills</h2>
                 <ul class="skills__inner">
                     <li class="skills__item">
-                        <h3 class="skills__title">MS Office</h3>
+                        <h3 class="skills__title">HTML 5</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
@@ -204,7 +204,7 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">SolidWorks</h3>
+                        <h3 class="skills__title">MS Office</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
@@ -212,6 +212,17 @@
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
 
+                        </div>
+                    </li>
+
+                    <li class="skills__item">
+                        <h3 class="skills__title">CSS 3</h3>
+                        <div class="skills__group">
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot"></div>
                         </div>
                     </li>
 
@@ -227,34 +238,23 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">Adminstration</h3>
+                        <h3 class="skills__title">JS</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot"></div>
+                            <div class="skills__dot"></div>
                             <div class="skills__dot"></div>
                         </div>
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">Hardware</h3>
+                        <h3 class="skills__title">SolidWorks</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
-                        </div>
-                    </li>
-
-                    <li class="skills__item">
-                        <h3 class="skills__title">Photoshop</h3>
-                        <div class="skills__group">
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
+                            <div class="skills__dot skills__dot--blue""></div>
                             <div class="skills__dot"></div>
                         </div>
                     </li>
@@ -271,18 +271,7 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">HTML 5</h3>
-                        <div class="skills__group">
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
-                        </div>
-                    </li>
-
-                    <li class="skills__item">
-                        <h3 class="skills__title">CSS3</h3>
+                        <h3 class="skills__title">WordPress</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
@@ -293,7 +282,7 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">SCSS</h3>
+                        <h3 class="skills__title">Figma</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
@@ -304,22 +293,33 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">Java Script</h3>
+                        <h3 class="skills__title">jQuery</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
                             <div class="skills__dot"></div>
                         </div>
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">GIT</h3>
+                        <h3 class="skills__title">Git</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
+                        </div>
+                    </li>
+
+                    <li class="skills__item">
+                        <h3 class="skills__title">NPM</h3>
+                        <div class="skills__group">
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
+                            <div class="skills__dot skills__dot--bluegit "></div>
                             <div class="skills__dot"></div>
                             <div class="skills__dot"></div>
                         </div>
@@ -337,7 +337,7 @@
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot"></div>
+                            <div class="skills__dot skills__dot--blue"></div>
                         </div>
                     </li>
 
@@ -365,7 +365,7 @@
                     </li>
 
                     <li class="skills__item">
-                        <h3 class="skills__title">Persuasion</h3>
+                        <h3 class="skills__title">Googling</h3>
                         <div class="skills__group">
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
