--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
-                            <div class="skills__dot skills__dot--blue""></div>
+                            <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
                         </div>
                     </li>
@@ -403,7 +403,7 @@
                     </div>
                 </div>
 
-    </div>
+    1
     </section>
 
     </main>
