feat:add new photo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,7 +36,7 @@
     <div class="container">
         <aside class="sidebar">
             <figure class="sidebar__img">
-                <img class="photo" src="img/photo.jpg" alt="photo">
+                <img class="photo" src="img/photo1.jpg" alt="photo">
             </figure>
             <div class="sidebar__item sidebar__item--dark sidebar__summary">
                 <h2 class="sidebar__title">About me</h2>
