feat:format code pretierre

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 <div class="page">
     <header class="header">
         <nav class="nav">
-
             <button class="burger_menu" type="button" id="navToggle">
                 <span class="burger__item">Burger</span>
             </button>
-
             <ul class="nav__inner ">
                 <li class="nav__item"><a class="nav__link" href="#expireance">Experience</a></li>
                 <li class="nav__item"><a class="nav__link" href="#skills">Skills</a></li>
@@ -32,7 +30,6 @@
             <h1 class="content__name">Pavel Melnikov</h1>
         </nav>
     </header>
-
     <div class="container">
         <aside class="sidebar">
             <figure class="sidebar__img">
@@ -43,7 +40,9 @@
                 <div class="sidebar__container">
                     <ul class="sidebar__content">
                         <li>I am a technician and looking for the opportunity to put my knowledge into practice.</li>
-                        <li>I have extensive experience working in a team, which allows me to quickly learn and share my own experience while working on a project</li>
+                        <li>I have extensive experience working in a team, which allows me to quickly learn and share my
+                            own experience while working on a project
+                        </li>
                         <li>Furthermore, I like to develop myself and fix mechanical and electronic devices.</li>
                         <li>In addition, I am interested in programming (front-end developing).</li>
                         <li>My hobby is riding my bike, skiing, playing drums.</li>
@@ -51,8 +50,6 @@
                     </ul>
                 </div>
             </div>
-
-
             <div class="sidebar__item sidebar__item--light sidebar__contacts" id="contacts">
                 <h2 class="sidebar__title">Contacts</h2>
                 <ul class="contact__list">
@@ -74,18 +71,19 @@
                     </li>
                 </ul>
             </div>
-
             <div class="sidebar__item sidebar__item--dark" id="education">
                 <h2 class="sidebar__title">Education</h2>
                 <div class="sidebar__container">
                     <ul class="sidebar__content">
-                        <li>Oshmyany, middle school №1, Dates Attended: 1995-2006, Pupil degree—computer science and English class profile.</li>
-                        <li>Mogilev, Belarusian-Russian university, Dates Attended: 2006 – 2011 Student Degree—automation of technological processes and production.</li>
+                        <li>Oshmyany, middle school №1, Dates Attended: 1995-2006, Pupil degree—computer science and
+                            English class profile.
+                        </li>
+                        <li>Mogilev, Belarusian-Russian university, Dates Attended: 2006 – 2011 Student
+                            Degree—automation of technological processes and production.
+                        </li>
                     </ul>
                 </div>
             </div>
-
-
             <div class="sidebar__item sidebar__item--light sidebar__language" id="languages">
                 <h2 class="sidebar__title">Languages</h2>
                 <div class="sidebar__container">
@@ -96,7 +94,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="sidebar__item sidebar__item--light sidebar__language" id="Courses">
                 <h2 class="sidebar__title">Courses</h2>
                 <div class="sidebar__container">
@@ -105,17 +102,11 @@
                         <li>UDEMY course, JavaScript + React, 2021.</li>
                         <li>UDEMY course, JavaScript advanced course, now.</li>
                         <li>Rolling Scopes JavaScript/Front end Pre-School 2021.</li>
-
                     </ul>
                 </div>
             </div>
-
-
         </aside>
-
         <main class="content">
-
-
             <section class="experience" id="expireance">
                 <h2 class="content__title">Experience</h2>
                 <div class="experience__item">
@@ -123,17 +114,24 @@
                         <tr>
                             <td class="experience__date">February 2016 — currently (total 10 years 11 months)</td>
                             <td class="experience__job">
-                                <h3 class="content__subtitle">Process - Engineer of furniture production, FLLC Mebelain.</h3>
-                                <ul >
-                                    <li class="content__text">Work documentation from sticker layouts to drawings and specifications (PDF, SVG).</li>
+                                <h3 class="content__subtitle">Process - Engineer of furniture production, FLLC
+                                    Mebelain.
+                                </h3>
+                                <ul>
+                                    <li class="content__text">Work documentation from sticker layouts to drawings and
+                                        specifications (PDF, SVG).
+                                    </li>
                                     <li class="content__text">Vector and raster graphics.</li>
-                                    <li class="content__text">Preparation of furniture samples for mechanical testing and sending to approved laboratories by IKEA.</li>
+                                    <li class="content__text">Preparation of furniture samples for mechanical testing
+                                        and sending to approved laboratories by IKEA.
+                                    </li>
                                     <li class="content__text">Correspondence with laboratory engineers.</li>
-                                    <li class="content__text">Development of models of cabinet furniture and detailing, furniture mechanisms.</li>
+                                    <li class="content__text">Development of models of cabinet furniture and detailing,
+                                        furniture mechanisms.
+                                    </li>
                                 </ul>
                             </td>
                         </tr>
-
                         <tr>
                             <td class="experience__date">August 2015 - February 2016</td>
                             <td class="experience__job">
@@ -146,7 +144,6 @@
                                 </ul>
                             </td>
                         </tr>
-
                         <tr>
                             <td class="experience__date">August 2014 - February 2015</td>
                             <td class="experience__job">
@@ -163,14 +160,32 @@
                                 <h3 class="content__subtitle">Tool shop foreman, OAO Olsa.</h3>
                                 <ul>
                                     <li class="content__text">Ensuring that the site fulfills planned targets.</li>
-                                    <li class="content__text">Ensuring maximum utilization of production capacity, full utilization and proper operation of equipment.</li>
-                                    <li class="content__text">Ensuring the timely preparation of production with materials, finished products, tools, fixtures, technical documentation.</li>
-                                    <li class="content__text">Systematic verification of the fulfillment of tasks by teams and individual workers.</li>
-                                    <li class="content__text">Organization of the solution of production and social issues of the unit's activities.</li>
-                                    <li class="content__text">Instructing subordinate workers, providing them with the necessary assistance in mastering production standards and fulfilling production tasks.</li>
-                                    <li class="content__text">Verification of compliance by workers with established technological processes and termination of work in cases of non-compliance with its established technical processes.</li>
-                                    <li class="content__text">Acceptance of the first part or product made by a worker on equipment that has come out of repair or after adjustment.</li>
-                                    <li class="content__text">Systematic inspection of the condition of equipment and fences, instructing workers and testing their knowledge of safety regulations.</li>
+                                    <li class="content__text">Ensuring maximum utilization of production capacity, full
+                                        utilization and proper operation of equipment.
+                                    </li>
+                                    <li class="content__text">Ensuring the timely preparation of production with
+                                        materials, finished products, tools, fixtures, technical documentation.
+                                    </li>
+                                    <li class="content__text">Systematic verification of the fulfillment of tasks by
+                                        teams and individual workers.
+                                    </li>
+                                    <li class="content__text">Organization of the solution of production and social
+                                        issues of the unit's activities.
+                                    </li>
+                                    <li class="content__text">Instructing subordinate workers, providing them with the
+                                        necessary assistance in mastering production standards and fulfilling production
+                                        tasks.
+                                    </li>
+                                    <li class="content__text">Verification of compliance by workers with established
+                                        technological processes and termination of work in cases of non-compliance with
+                                        its established technical processes.
+                                    </li>
+                                    <li class="content__text">Acceptance of the first part or product made by a worker
+                                        on equipment that has come out of repair or after adjustment.
+                                    </li>
+                                    <li class="content__text">Systematic inspection of the condition of equipment and
+                                        fences, instructing workers and testing their knowledge of safety regulations.
+                                    </li>
                                 </ul>
                             </td>
                         </tr>
@@ -179,7 +194,9 @@
                             <td class="experience__job">
                                 <h3 class="content__subtitle">Design engineer, OAO Olsa</h3>
                                 <ul>
-                                    <li class="content__text">Development of drawings for the manufacture of tooling, dies (punching and bending, molding), welding fixtures, jig, templates and, to a lesser extent, molds.
+                                    <li class="content__text">Development of drawings for the manufacture of tooling,
+                                        dies (punching and bending, molding), welding fixtures, jig, templates and, to a
+                                        lesser extent, molds.
                                     </li>
                                 </ul>
                             </td>
@@ -187,7 +204,6 @@
                     </table>
                 </div>
             </section>
-
             <section class="skills" id="skills">
                 <h2 class="content__title">Skills</h2>
                 <ul class="skills__inner">
@@ -201,7 +217,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">MS Office</h3>
                         <div class="skills__group">
@@ -210,10 +225,8 @@
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
-
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">CSS 3</h3>
                         <div class="skills__group">
@@ -224,7 +237,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Kompas 3D</h3>
                         <div class="skills__group">
@@ -235,7 +247,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">JS</h3>
                         <div class="skills__group">
@@ -246,7 +257,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">SolidWorks</h3>
                         <div class="skills__group">
@@ -257,7 +267,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">CorelDraw</h3>
                         <div class="skills__group">
@@ -268,7 +277,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">WordPress</h3>
                         <div class="skills__group">
@@ -279,7 +287,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Figma</h3>
                         <div class="skills__group">
@@ -290,7 +297,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">jQuery</h3>
                         <div class="skills__group">
@@ -301,7 +307,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Git</h3>
                         <div class="skills__group">
@@ -312,7 +317,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">NPM</h3>
                         <div class="skills__group">
@@ -325,7 +329,6 @@
                     </li>
                 </ul>
             </section>
-
             <section class="skills" id="softskills">
                 <h2 class="content__title">Soft skills</h2>
                 <ul class="skills__inner">
@@ -339,7 +342,6 @@
                             <div class="skills__dot skills__dot--blue"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Stress</h3>
                         <div class="skills__group">
@@ -348,10 +350,8 @@
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot skills__dot--blue"></div>
                             <div class="skills__dot"></div>
-
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Creativity</h3>
                         <div class="skills__group">
@@ -362,7 +362,6 @@
                             <div class="skills__dot"></div>
                         </div>
                     </li>
-
                     <li class="skills__item">
                         <h3 class="skills__title">Googling</h3>
                         <div class="skills__group">
@@ -375,53 +374,42 @@
                     </li>
                 </ul>
             </section>
-
-
             <section class="code__section" id="code">
                 <h2 class="content__title">My projects</h2>
                 <div class="content__text code__text">
-
                     <div class="code__projects">
-                        <a class="slider project__img" target="_blank" href="https://pavelm1988.github.io/cssMemSlider/cssMemSlider/">
+                        <a class="slider project__img" target="_blank"
+                           href="https://pavelm1988.github.io/cssMemSlider/cssMemSlider/">
                             <div class="mask"></div>
                             <h4 class="project__title whoke-title">SliderCSS</h4>
                             <img src="img/SliderCSS.png" alt="Slider image">
                         </a>
-                        <a class="museum project__img" target="_blank" href="https://rolling-scopes-school.github.io/pavelm1988-JSFE2021Q1/js-clock/">
+                        <a class="museum project__img" target="_blank"
+                           href="https://rolling-scopes-school.github.io/pavelm1988-JSFE2021Q1/js-clock/">
                             <h4 class="project__title">JS Clock</h4>
                             <div class="mask"></div>
                             <img src="img/js_clock.png" alt="Clock image">
                         </a>
-
                         <a class="museum project__img" target="_blank" href="https://virtyal-keybord.netlify.app//">
                             <h4 class="project__title">Keyboard</h4>
                             <div class="mask"></div>
                             <img src="img/virtual_keyboard.png" alt="Keyboard image">
                         </a>
-
                     </div>
                 </div>
-
-    1
-    </section>
-
-    </main>
-</div>
-
-<footer class="footer">
-    <div class="footer__container" id="Selfintro">
-        <div class="footer__date">Updated 2022-06-01 by Pavel Melnikov</div>
-
-        <a class="logo" href="https://www.youtube.com/watch?v=hRSMbOwmllM">
-            <img class="icon" src="img/you_tube.png" alt="YouTube_logo">
-        </a>
-
+                1
+            </section>
+        </main>
     </div>
-
-</footer>
-
+    <footer class="footer">
+        <div class="footer__container" id="Selfintro">
+            <div class="footer__date">Updated 2022-06-01 by Pavel Melnikov</div>
+            <a class="logo" href="https://www.youtube.com/watch?v=hRSMbOwmllM">
+                <img class="icon" src="img/you_tube.png" alt="YouTube_logo">
+            </a>
+        </div>
+    </footer>
 </div>
 <script src="script.js"></script>
-
 </body>
 </html>
