feat: start tranlsate index_RU

--- a/pages/index_RU.html
+++ b/pages/index_RU.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>CV Pavel Melnikov</title>
 </head>
 <body>
@@ -19,21 +19,21 @@
                 <span class="burger__item">Burger</span>
             </button>
             <ul class="nav__inner ">
-                <li class="nav__item"><a class="nav__link" href="#expireance">Experience</a></li>
-                <li class="nav__item"><a class="nav__link" href="#skills">Skills</a></li>
-                <li class="nav__item"><a class="nav__link" href="#code">My projects</a></li>
-                <li class="nav__item"><a class="nav__link" href="#contacts">Contacts</a></li>
-                <li class="nav__item"><a class="nav__link" href="#education">Education</a></li>
-                <li class="nav__item"><a class="nav__link" href="#languages">Courses</a></li>
-                <li class="nav__item"><a class="nav__link" href="#languages">Languages</a></li>
+                <li class="nav__item"><a class="nav__link" href="#expireance">Опыт</a></li>
+                <li class="nav__item"><a class="nav__link" href="#skills">Навыки</a></li>
+                <li class="nav__item"><a class="nav__link" href="#code">Мои проекты</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contacts">Контакты</a></li>
+                <li class="nav__item"><a class="nav__link" href="#education">Образваоние</a></li>
+                <li class="nav__item"><a class="nav__link" href="#languages">Курсы</a></li>
+                <li class="nav__item"><a class="nav__link" href="#languages">Языки</a></li>
             </ul>
-            <h1 class="content__name">Pavel Melnikov</h1>
+            <h1 class="content__name">Павел Мельников</h1>
         </nav>
     </header>
     <div class="container">
         <aside class="sidebar">
             <figure class="sidebar__img">
-                <img class="photo" src="img/photo1.jpg" alt="photo">
+                <img class="photo" src="/img/photo1.jpg" alt="photo">
             </figure>
             <div class="sidebar__item sidebar__item--dark sidebar__summary">
                 <h2 class="sidebar__title">About me</h2>
@@ -51,14 +51,14 @@
                 </div>
             </div>
             <div class="sidebar__item sidebar__item--light sidebar__contacts" id="contacts">
-                <h2 class="sidebar__title">Contacts</h2>
+                <h2 class="sidebar__title">Контакты</h2>
                 <ul class="contact__list">
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">Phone (A1)</h3>
+                        <h3 class="sidebar__subtitle">Телефон (A1)</h3>
                         <div class="sidebar__content">+375 (29)-320-02-91</div>
                     </li>
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">Email</h3>
+                        <h3 class="sidebar__subtitle">э-почта</h3>
                         <div class="sidebar__content">paulo.melnikov@icloud.com</div>
                     </li>
                     <li class="sidebar__container contact__item">
@@ -66,7 +66,7 @@
                         <div class="sidebar__content">@pavelmelnikov1988</div>
                     </li>
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">Location</h3>
+                        <h3 class="sidebar__subtitle">Локация</h3>
                         <div class="sidebar__content">Mogilev, Belarus</div>
                     </li>
                 </ul>
@@ -382,18 +382,18 @@
                            href="https://pavelm1988.github.io/cssMemSlider/cssMemSlider/">
                             <div class="mask"></div>
                             <h4 class="project__title whoke-title">SliderCSS</h4>
-                            <img src="img/SliderCSS.png" alt="Slider image">
+                            <img src="/img/SliderCSS.png" alt="Slider image">
                         </a>
                         <a class="museum project__img" target="_blank"
                            href="https://rolling-scopes-school.github.io/pavelm1988-JSFE2021Q1/js-clock/">
                             <h4 class="project__title">JS Clock</h4>
                             <div class="mask"></div>
-                            <img src="img/js_clock.png" alt="Clock image">
+                            <img src="/img/js_clock.png" alt="Clock image">
                         </a>
                         <a class="museum project__img" target="_blank" href="https://virtyal-keybord.netlify.app//">
                             <h4 class="project__title">Keyboard</h4>
                             <div class="mask"></div>
-                            <img src="img/virtual_keyboard.pngпше " alt="Keyboard image">
+                            <img src="/img/virtual_keyboard.pngпше " alt="Keyboard image">
                         </a>
                     </div>
                 </div>
@@ -405,11 +405,11 @@
             <div class="footer__date">Updated 2022-06-01 by Pavel Melnikov</div>
 
             <a class="logo" href="https://www.youtube.com/watch?v=hRSMbOwmllM">
-                <img class="icon" src="img/you_tube.png" alt="YouTube_logo">
+                <img class="icon" src="/img/you_tube.png" alt="YouTube_logo">
             </a>
         </div>
     </footer>
 </div>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
