feat: ru continue

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <li class="content__text">LEAN Production.</li>
                                     <li class="content__text">Kanban.</li>
                                     <li class="content__text">SMED.</li>
-                                    <li class="content__text">5S Methodology</li>
+                                    <li class="content__text">5S Methodology.</li>
                                 </ul>
                             </td>
                         </tr>
@@ -393,7 +393,7 @@
                         <a class="museum project__img" target="_blank" href="https://virtyal-keybord.netlify.app//">
                             <h4 class="project__title">Keyboard</h4>
                             <div class="mask"></div>
-                            <img src="img/virtual_keyboard.pngпше " alt="Keyboard image">
+                            <img src="img/virtual_keyboard.png " alt="Keyboard image">
                         </a>
                     </div>
                 </div>
