--- a/pages/index_RU.html
+++ b/pages/index_RU.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./my_favicon.ico" type="image/ico" sizes="any"/>
+    <link rel="icon" href="/my_favicon.ico" type="image/ico" sizes="any"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -58,34 +58,34 @@
                         <div class="sidebar__content">+375 (29)-320-02-91</div>
                     </li>
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">э-почта</h3>
+                        <h3 class="sidebar__subtitle">Эл.почта</h3>
                         <div class="sidebar__content">paulo.melnikov@icloud.com</div>
                     </li>
                     <li class="sidebar__container contact__item">
-                        <h3 class="sidebar__subtitle">Telegram</h3>
+                        <h3 class="sidebar__subtitle">Телеграм</h3>
                         <div class="sidebar__content">@pavelmelnikov1988</div>
                     </li>
                     <li class="sidebar__container contact__item">
                         <h3 class="sidebar__subtitle">Локация</h3>
-                        <div class="sidebar__content">Mogilev, Belarus</div>
+                        <div class="sidebar__content">Могилев, Беларусь</div>
                     </li>
                 </ul>
             </div>
             <div class="sidebar__item sidebar__item--dark" id="education">
-                <h2 class="sidebar__title">Education</h2>
+                <h2 class="sidebar__title">Образование</h2>
                 <div class="sidebar__container">
                     <ul class="sidebar__content">
-                        <li>Oshmyany, middle school №1, Dates Attended: 1995-2006, Pupil degree—computer science and
-                            English class profile.
+                        <li>г.Ошмяны, средняя общеобразовательная школа №1, Годы обучения: 1995-2006, ученик, Профиль класса - информатика и
+                             английского языка.
                         </li>
-                        <li>Mogilev, Belarusian-Russian university, Dates Attended: 2006 – 2011 Student
-                            Degree—automation of technological processes and production.
+                        <li>г.Могилев, Белорусско-Российский университет, Годы обучения: 2006 – 2011, Студент,
+                            автоматизация технологических процессов и производств.
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="sidebar__item sidebar__item--light sidebar__language" id="languages">
-                <h2 class="sidebar__title">Languages</h2>
+                <h2 class="sidebar__title">Языки</h2>
                 <div class="sidebar__container">
                     <ul class="sidebar__content">
                         <li>Belarusian: native language</li>
@@ -393,7 +393,7 @@
                         <a class="museum project__img" target="_blank" href="https://virtyal-keybord.netlify.app//">
                             <h4 class="project__title">Keyboard</h4>
                             <div class="mask"></div>
-                            <img src="/img/virtual_keyboard.pngпше " alt="Keyboard image">
+                            <img src="/img/virtual_keyboard.png" alt="Keyboard image">
                         </a>
                     </div>
                 </div>
